[MSE] Setting timestampOffset does not change the timestamps in the actual sample, leading to visual and audible errors. https://bugs.webkit.org/show_bug.cgi?id=140929

Reviewed by Darin Adler.

Source/WebCore:

Test: media/media-source/media-source-timeoffset.html

Changing timestampOffset will correctly offset the presentation and decode times within SourceBuffer and
will correctly modify things like buffered ranges. But those changes need to be reflected in the underlying
MediaSample for decoders to decode and display the samples at the correct times.

Add a method to MediaSample which allows the caller to offset timestamps of the underlying PlatformMediaSample.

* Modules/mediasource/SourceBuffer.cpp:
(WebCore::SourceBuffer::sourceBufferPrivateDidReceiveSample): Call offsetTimestampsBy() on the sample.
* platform/MediaSample.h:
* platform/graphics/avfoundation/objc/SourceBufferPrivateAVFObjC.mm:
(WebCore::MediaSampleAVFObjC::offsetTimestampsBy): Create a new sample with the same underlying data
    but with a new timing info array, each timing info offset by the requested amount.
* platform/mock/mediasource/MockBox.h:
(WebCore::MockBox::offsetTimestampsBy): Offset m_presentationTimestamp and m_decodeTimestamp;
* platform/mock/mediasource/MockSourceBufferPrivate.cpp:
(WebCore::MockMediaSample::offsetTimestampsBy): Pass to MockBox.

LayoutTests:

* media/media-source/media-source-timeoffset-expected.txt: Added.
* media/media-source/media-source-timeoffset.html: Added.


Canonical link: https://commits.webkit.org/159217@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@179564 268f45cc-cd09-0410-ab3c-d52691b4dbfc